--- a/项目/Random Quote Machine.html
+++ b/项目/Random Quote Machine.html
@@ -14,7 +14,7 @@
             background:white;
             padding:30px 20px;
             margin:auto;
-            top:100px;
+            top:40%;
             width: 550px;
             height: 250px;
         }
@@ -58,8 +58,6 @@
             background-color: #888888;
         }
         #by{
-            position: absolute;
-            top:450px;
             color:white;
             font-size:1.1em;
         }
